--- a/.github/workflows/build-windows-executable-app.yaml
+++ b/.github/workflows/build-windows-executable-app.yaml
@@ -1,24 +1,29 @@
-name: Build executable for Windows_as_main
-on: #[push]
+name: Build executable for Windows
+on:
+  push:
+    branches: [ "development" ]
+  pull_request:
+    branches: [ "main" ]
   workflow_dispatch:
+env:
+  OPENMS_VERSION: 3.2.0 
+  # Define needed TOPP tools here
+  TOPP_TOOLS: "OpenNuXL"
 
 jobs:
   build-openms:
     runs-on: windows-latest
 
-    env:
-      OPENMS_VERSION: 3.0.0 
-
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
         repository: OpenMS/OpenMS
-        ref: develop #release/${{ env.OPENMS_VERSION }}
+        ref: feature/NuXL #release/${{ env.OPENMS_VERSION }}
         path: 'OpenMS'
 
     - name: Install Qt
-      uses: jurplel/install-qt-action@v3
+      uses: jurplel/install-qt-action@v4
       with:
         version: '5.15.2' # 5.12.7 is broken https://bugreports.qt.io/browse/QTBUG-81715, > 5.15.2 is not available on official archives (https://github.com/miurahr/aqtinstall/issues/636)
         host: 'windows' # default: win64_msvc2017_64
@@ -54,21 +59,26 @@ jobs:
 
     - name: Cache contrib
       id: cache-contrib-win
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: ${{ github.workspace }}/OpenMS/contrib
         key: ${{ runner.os }}-contrib3
 
     - name: Load contrib build
       if: steps.cache-contrib-win.outputs.cache-hit != 'true'
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-          cd OpenMS/contrib
-          curl -o contribbld.tar.gz https://abibuilder.cs.uni-tuebingen.de/archive/openms/contrib/windows/x64/msvc-14.2/contrib_build.tar.gz
-          tar -xzf contribbld.tar.gz
-          rm contribbld.tar.gz
+        cd OpenMS/contrib
+        # Download the file using the URL fetched from GitHub
+        gh release download -R OpenMS/contrib --pattern 'contrib_build-Windows.tar.gz'
+        # Extract the archive
+        7z x -so contrib_build-Windows.tar.gz | 7z x -si -ttar
+        rm contrib_build-Windows.tar.gz
+        ls
 
     - name: Setup ccache cache
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: .ccache
         key: ${{ runner.os }}-ccache-${{ env.RUN_NAME }}-${{ github.run_number }}
@@ -103,7 +113,7 @@ jobs:
           ctest --output-on-failure -V -S $GITHUB_WORKSPACE/OpenMS/tools/ci/cibuild.cmake
       env:
           #OS_PREFIX_PATH: "${{ env.Qt5_DIR }}/lib/cmake;${{ env.Qt5_DIR }}"
-          CONTRIB_BUILD_DIRECTORY: "${{ github.workspace }}/OpenMS/contrib"
+          OPENMS_CONTRIB_LIBS: "${{ github.workspace }}/OpenMS/contrib"
           CI_PROVIDER: "GitHub-Actions"
           CMAKE_GENERATOR: "Ninja"
           SOURCE_DIRECTORY: "${{ github.workspace }}/OpenMS"
@@ -111,7 +121,7 @@ jobs:
           ENABLE_STYLE_TESTING: "OFF"
           ENABLE_TOPP_TESTING: "ON"
           ENABLE_CLASS_TESTING: "ON"
-          WITH_GUI: "ON"
+          WITH_GUI: "OFF"
           ADDRESS_SANITIZER: "Off"
           BUILD_TYPE: "Release"
           OPENMP: "Off"
@@ -125,124 +135,29 @@ jobs:
           CCACHE_COMPRESSLEVEL: 12
           CCACHE_MAXSIZE: 400M
 
-    # - name: Test Windows
+    #- name: Test Windows
     #  shell: bash
-    #  run: $LAUNCHER ctest --output-on-failure -V -S $GITHUB_WORKSPACE/OpenMS/tools/ci/citest.cmake
+    #  run: ctest --output-on-failure -V -S $GITHUB_WORKSPACE/OpenMS/tools/ci/citest.cmake
     #  env:
-    #      LAUNCHER: ""
     #      SOURCE_DIRECTORY: "${{ github.workspace }}/OpenMS"
-    #      CI_PROVIDER: "GitHub-Actions"
+    #     CI_PROVIDER: "GitHub-Actions"
     #      BUILD_NAME: "${{ env.RUN_NAME }}-Win64-class-topp-${{ github.run_number }}"
 
-    - name: Upload TOPP tools as artifact
-      uses: actions/upload-artifact@v3
+    #- name: Package
+    #  shell: bash
+    #  run: |
+    #      ctest --output-on-failure -V -S $GITHUB_WORKSPACE/OpenMS/tools/ci/cipackage.cmake
+    #  env:
+    #      SOURCE_DIRECTORY: "${{ github.workspace }}/OpenMS"
+    #      PACKAGE_TYPE: zip
+    #      SEARCH_ENGINES_DIRECTORY: "${{ github.workspace }}/_thirdparty"
+    #      CI_PROVIDER: "GitHub-Actions"
+    #      CPACK_PACKAGE_FILE_NAME: "openms-package"
+
+    - name: Upload package as artifact
+      uses: actions/upload-artifact@v4
       with:
-        name: OpenMS-bin
-        path: OpenMS/bld/bin
+        name: openms-package
+        path: ${{ github.workspace }}/OpenMS/bld/
 
-    - name: Upload share as artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: OpenMS-share
-        path: OpenMS/share
-
-  build-executable:
-    runs-on: windows-latest
-    needs: build-openms
-
-    env: 
-      PYTHON_VERSION: 3.11.0
-
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-
-    - name: Download TOPP tools as artifact
-      uses: actions/download-artifact@v3
-      with:
-        name: OpenMS-bin
-        path: openms-bin
-
-    - name: Download share as artifact
-      uses: actions/download-artifact@v3
-      with:
-        name: OpenMS-share
-        path: share
-
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ env.PYTHON_VERSION }}
-
-    - name: Setup virtual environment
-      shell: cmd
-      run: |
-        python -m venv myenv
-
-        call myenv\Scripts\activate.bat   
-
-        pip install -r requirements.txt
-
-        pip install pyinstaller
-
-    - name: Write function to cli.py
-      shell: bash
-      run: |
-        head -n -2 D:/a/NuXL-app/NuXL-app/myenv/Lib/site-packages/streamlit/web/cli.py > temp_cli.py
-
-        cat << EOF >> temp_cli.py
-        def _main_run_clExplicit(file, command_line, args=[], flag_options=[]):
-            main._is_running_with_streamlit = True
-            bootstrap.run(file, command_line, args, flag_options)
-
-
-        if __name__ == "__main__":
-            main()
-        EOF
-
-        mv temp_cli.py D:/a/NuXL-app/NuXL-app/myenv/Lib/site-packages/streamlit/web/cli.py  
-
-    - name: Compile app with pyinstaller
-      shell: cmd
-      run: |
-        call myenv\Scripts\activate.bat 
-        pyinstaller --onefile --additional-hooks-dir ./hooks run_app.py --clean
-
-
-    - name: Copy everything to dist directory
-      run: |
-        cp -r streamlit_exe/.streamlit dist/.streamlit
-        cp -r pages dist/pages
-        cp -r src dist/src
-        cp -r assets dist/assets
-        cp -r example-data dist/example-data
-        cp -r openms-bin dist/bin
-        cp -r Percolator dist/Percolator
-        cp app.py dist/
-    
-    - name: Modify .spec file
-      shell: bash
-      run: |
-        cp run_app_temp.spec run_app.spec
-
-    - name: Make executable
-      shell: cmd
-      run: |
-        call myenv\Scripts\activate.bat
-        pyinstaller run_app.spec --clean
-
-    - name: Delete OpenMS bin artifact
-      uses: geekyeggo/delete-artifact@v2
-      with:
-          name: OpenMS-bin
-
-    - name: Delete OpenMS share artifact
-      uses: geekyeggo/delete-artifact@v2
-      with:
-          name: OpenMS-share
-
-    - name: Upload artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: OpenMS-NuXL
-        path: dist
+  
