--- a/.github/workflows/build-windows-executable-app.yaml
+++ b/.github/workflows/build-windows-executable-app.yaml
@@ -160,4 +160,146 @@ jobs:
         name: openms-package
         path: ${{ github.workspace }}/OpenMS/bld/
 
-  
+  build-executable:
+    runs-on: windows-latest
+    needs: build-openms
+
+    env:
+      PYTHON_VERSION: 3.11.0
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+
+    - name: Download package as artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: openms-package
+        path: openms-package
+
+    - name: Extract bin and share from package
+      run: |
+        cd openms-package
+        unzip "*.zip" -d .
+        cp -r openms-package/bin ../openms-bin
+        cp -r openms-package/share ../share
+
+    - name: Setup python embeddable version
+      run: |
+        mkdir python-${{ env.PYTHON_VERSION }}
+        curl -O https://www.python.org/ftp/python/${{ env.PYTHON_VERSION }}/python-${{ env.PYTHON_VERSION }}-embed-amd64.zip
+        unzip python-${{ env.PYTHON_VERSION }}-embed-amd64.zip -d python-${{ env.PYTHON_VERSION }}
+        rm python-${{ env.PYTHON_VERSION }}-embed-amd64.zip
+
+    - name: Install pip
+      run: |
+        curl -O https://bootstrap.pypa.io/get-pip.py
+        ./python-${{ env.PYTHON_VERSION }}/python get-pip.py --no-warn-script-location
+        rm get-pip.py
+
+    - name: Uncomment 'import site' in python311._pth file
+      run: |
+        sed -i 's/#import site/import site/' python-${{ env.PYTHON_VERSION }}/python311._pth
+
+    - name: Install Required Packages
+      run: .\python-${{ env.PYTHON_VERSION }}\python -m pip install --force-reinstall -r requirements.txt --no-warn-script-location
+
+    - name: Create run_app.bat file
+      run: |
+        echo '@echo off' > run_app.bat
+        echo '.\\python-${{ env.PYTHON_VERSION }}\\python -m streamlit run app.py local' >> run_app.bat
+    
+    - name: Set to offline deployment
+      run: |
+        $content = Get-Content -Raw settings.json | ConvertFrom-Json
+        $content.online_deployment = $false
+        $content | ConvertTo-Json -Depth 100 | Set-Content settings.json
+
+    - name: Create All-in-one executable folder
+      run: |
+        mkdir streamlit_exe
+
+        mv python-${{ env.PYTHON_VERSION }} streamlit_exe
+        #mv run_app.bat streamlit_exe
+        cp -r src streamlit_exe
+        cp -r pages streamlit_exe
+        cp -r assets streamlit_exe
+        cp -r example-data streamlit_exe
+        cp openms-bin/*.dll streamlit_exe
+        cp -r .streamlit streamlit_exe
+        cp -r share streamlit_exe/share
+        cp app.py streamlit_exe
+        cp settings.json streamlit_exe
+
+        $files = $env:TOPP_TOOLS -split ' '
+        foreach ($file in $files) {
+          Copy-Item "openms-bin/${file}.exe" -Destination "streamlit_exe/${file}.exe"
+        }
+    
+    - name: Install WiX Toolset
+      run: |
+        curl -LO https://github.com/wixtoolset/wix3/releases/download/wix3111rtm/wix311-binaries.zip
+        unzip wix311-binaries.zip -d wix
+        rm wix311-binaries.zip
+    
+    - name: build .wxs for streamlit_exe folder
+      run: |
+        ./wix/heat.exe dir streamlit_exe -gg -sfrag -sreg -srd -template component -cg StreamlitExeFiles -dr INSTALLFOLDER -out streamlit_exe_files.wxs
+    
+    - name: CopytoSrcDir
+      run: |
+        mkdir SourceDir
+        cp -r streamlit_exe/* SourceDir
+        mv run_app.bat SourceDir
+        cp dummy_license.rtf SourceDir
+
+    - name: Generate WiX XML file
+      run: |
+        echo '<?xml version="1.0"?>' > streamlit_exe.wxs
+        echo '<Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">' >> streamlit_exe.wxs
+        echo '  <Product Id="*" Name="OpenMS-StreamlitTemplateApp" Language="1033" Version="1.0.0.0" Manufacturer="OpenMS" UpgradeCode="8d28e8c7-45dc-446c-b889-99a6aea2f1a5">' >> streamlit_exe.wxs
+        echo '    <Package InstallerVersion="500" Compressed="yes" InstallScope="perMachine"/>' >> streamlit_exe.wxs
+        echo '    <Media Id="1" Cabinet="streamlit.cab" EmbedCab="yes" />' >> streamlit_exe.wxs
+        echo '    <Property Id="WIXUI_INSTALLDIR" Value="INSTALLFOLDER" />' >> streamlit_exe.wxs
+        echo '    <Property Id="INSTALLFOLDER" Secure="yes" />' >> streamlit_exe.wxs
+        echo '    <Directory Id="TARGETDIR" Name="SourceDir">' >> streamlit_exe.wxs
+        echo '      <Directory Id="ProgramFilesFolder">' >> streamlit_exe.wxs
+        echo '        <Directory Id="INSTALLFOLDER" Name="StreamlitApp" />' >> streamlit_exe.wxs
+        echo '      </Directory>' >> streamlit_exe.wxs
+        echo '    </Directory>' >> streamlit_exe.wxs
+        echo '    <Feature Id="MainFeature" Title="Main Application" Level="1">' >> streamlit_exe.wxs
+        echo '      <ComponentGroupRef Id="StreamlitExeFiles" />' >> streamlit_exe.wxs
+        echo '      <ComponentRef Id="BatFileComponent" />' >> streamlit_exe.wxs
+        echo '    </Feature>' >> streamlit_exe.wxs
+        echo '    <Component Id="BatFileComponent" Guid="7aa6c3dc-f78e-40ce-b6a1-e11240af3c84" Directory="INSTALLFOLDER">' >> streamlit_exe.wxs
+        echo '      <File Id="BatFile" Source="SourceDir/run_app.bat" KeyPath="yes" />' >> streamlit_exe.wxs
+        echo '    </Component>' >> streamlit_exe.wxs
+        echo '    <CustomAction Id="RunBatchFile" Directory="INSTALLFOLDER" Execute="deferred" Return="asyncNoWait"' >> streamlit_exe.wxs
+        echo '                  ExeCommand="cmd.exe /c &quot;[INSTALLFOLDER]run_app.bat&quot;" />' >> streamlit_exe.wxs
+        echo '    <InstallExecuteSequence>' >> streamlit_exe.wxs
+        echo '      <Custom Action="RunBatchFile" Before="InstallFinalize">NOT REMOVE</Custom>' >> streamlit_exe.wxs
+        echo '    </InstallExecuteSequence>' >> streamlit_exe.wxs
+        echo '    <UI>' >> streamlit_exe.wxs
+        echo '      <UIRef Id="WixUI_InstallDir" />' >> streamlit_exe.wxs
+        echo '      <UIRef Id="WixUI_ErrorProgressText" />' >> streamlit_exe.wxs
+        echo '    </UI>' >> streamlit_exe.wxs
+        echo '    <WixVariable Id="WixUILicenseRtf" Value="SourceDir/dummy_license.rtf" />' >> streamlit_exe.wxs
+        echo '  </Product>' >> streamlit_exe.wxs
+        echo '</Wix>' >> streamlit_exe.wxs
+
+    - name: Build msi
+      run: |
+        ./wix/candle.exe streamlit_exe.wxs streamlit_exe_files.wxs
+        ./wix/light.exe -ext WixUIExtension -sice:ICE60 -o Streamlit-template-installer-test.msi streamlit_exe_files.wixobj streamlit_exe.wixobj
+          
+    - name: Delete OpenMS bin artifact
+      uses: geekyeggo/delete-artifact@v5
+      with:
+          name: openms-package
+    
+    - name: Archive build artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: OpenMS-StreamlitTemplateApp
+        path: |
+          OpenMS-StreamlitTemplateApp.msi
