check files in openms-package:: Update build-windows-executable-app.yaml

--- a/.github/workflows/build-windows-executable-app.yaml
+++ b/.github/workflows/build-windows-executable-app.yaml
@@ -177,6 +177,10 @@ jobs:
         name: openms-package
         path: openms-package
 
+    - name: List files in openms-package
+      run: |
+        ls -R openms-package
+
     - name: Extract bin and share from package
       run: |
         cd openms-package
