fixed streamlit_exe:: Update build-windows-executable-app.yaml

--- a/.github/workflows/build-windows-executable-app.yaml
+++ b/.github/workflows/build-windows-executable-app.yaml
@@ -223,6 +223,11 @@ jobs:
 
     - name: Create All-in-one executable folder
       run: |
+
+        if (Test-Path -Path "streamlit_exe") {
+            Remove-Item -Recurse -Force "streamlit_exe"
+        }
+        
         mkdir streamlit_exe
 
         mv python-${{ env.PYTHON_VERSION }} streamlit_exe
