--- a/.github/workflows/build-windows-executable-app.yaml
+++ b/.github/workflows/build-windows-executable-app.yaml
@@ -238,7 +238,7 @@ jobs:
         cp -r example-data streamlit_exe
         cp openms-bin/*.dll streamlit_exe
         cp -r .streamlit streamlit_exe
-        cp -r share streamlit_exe/share
+        #cp -r share streamlit_exe/share
         cp app.py streamlit_exe
         cp settings.json streamlit_exe
 
