--- a/.github/workflows/build-windows-executable-app.yaml
+++ b/.github/workflows/build-windows-executable-app.yaml
@@ -240,16 +240,16 @@ jobs:
         cp -r pages streamlit_exe
         cp -r assets streamlit_exe
         cp -r example-data streamlit_exe
-        cp openms-bin/*.dll streamlit_exe
+        cp -r openms-bin/ streamlit_exe
         cp -r .streamlit streamlit_exe
         #cp -r share streamlit_exe/share
         cp app.py streamlit_exe
         cp settings.json streamlit_exe
 
-        $files = $env:TOPP_TOOLS -split ' '
-        foreach ($file in $files) {
-          Copy-Item "openms-bin/${file}.exe" -Destination "streamlit_exe/${file}.exe"
-        }
+        #$files = $env:TOPP_TOOLS -split ' '
+        #foreach ($file in $files) {
+        #  Copy-Item "openms-bin/${file}.exe" -Destination "streamlit_exe/${file}.exe"
+        #}
     
     - name: Install WiX Toolset
       run: |
