--- a/.github/workflows/build-windows-executable-app.yaml
+++ b/.github/workflows/build-windows-executable-app.yaml
@@ -158,7 +158,9 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: openms-package
-        path: ${{ github.workspace }}/OpenMS/bld/*
+        path: |
+          ${{ github.workspace }}/OpenMS/bld/*
+          ${{ github.workspace }}/_thirdparty/*
 
   build-executable:
     runs-on: windows-latest
