--- a/.github/workflows/build-windows-executable-app.yaml
+++ b/.github/workflows/build-windows-executable-app.yaml
@@ -168,6 +168,7 @@ jobs:
 
     env:
       PYTHON_VERSION: 3.11.0
+      APP_NAME: OpenMS-NuXLApp
 
     steps:
     - name: Checkout
@@ -252,7 +253,31 @@ jobs:
         #$files = $env:TOPP_TOOLS -split ' '
         #foreach ($file in $files) {
         #  Copy-Item "openms-bin/${file}.exe" -Destination "streamlit_exe/${file}.exe"
+        
         #}
+    - name: Generate Readme.txt
+      shell: bash
+      run: |
+        cat <<EOF > streamlit_exe/Readme.txt
+        Welcome to ${{ env.APP_NAME }} app!
+
+        To launch the application:
+        1. Navigate to the installation directory.
+        2. Double-click on the file: ${{ env.APP_NAME }}.bat or ${{ env.APP_NAME }} shortcut.
+
+        Additional Information:
+        - If multiple Streamlit apps are running, you can change the port in the .streamlit/config.toml file.
+          Example:
+            [server]
+            port = 8502
+
+        Reach out to us:
+        - Join our Discord server for support and community discussions: https://discord.com/invite/4TAGhqJ7s5
+        - Contribute or stay updated with the latest OpenMS web app developments on GitHub: https://github.com/OpenMS/streamlit-template
+        - Visit our website for more information: https://openms.de/
+        
+        Thank you for using ${{ env.APP_NAME }}!
+        EOF
     
     - name: Install WiX Toolset
       run: |
@@ -262,7 +287,14 @@ jobs:
     
     - name: build .wxs for streamlit_exe folder
       run: |
-        ./wix/heat.exe dir streamlit_exe -gg -sfrag -sreg -srd -template component -cg StreamlitExeFiles -dr INSTALLFOLDER -out streamlit_exe_files.wxs
+        ./wix/heat.exe dir streamlit_exe -gg -sfrag -sreg -srd -template component -cg StreamlitExeFiles -dr AppSubFolder -out streamlit_exe_files.wxs
+
+    - name: Generate VBScript file
+      shell: bash
+      run: |
+        cat <<EOF > ShowSuccessMessage.vbs
+        MsgBox "The ${{ env.APP_NAME }} application is successfully installed.", vbInformation, "Installation Complete"
+        EOF
     
     - name: CopytoSrcDir
       run: |
@@ -270,54 +302,109 @@ jobs:
         cp -r streamlit_exe/* SourceDir
         mv run_app.bat SourceDir
         cp dummy_license.rtf SourceDir
+        
+    - name: Prepare SourceDir
+      run: |
+          mkdir SourceDir
+          mv streamlit_exe/* SourceDir
+          cp ShowSuccessMessage.vbs SourceDir
+          cp assets/openms_license.rtf SourceDir
+          # Logo of app
+          cp assets/openms.ico SourceDir
 
     - name: Generate WiX XML file
+      shell: bash
       run: |
-        echo '<?xml version="1.0"?>' > streamlit_exe.wxs
-        echo '<Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">' >> streamlit_exe.wxs
-        echo '  <Product Id="*" Name="OpenMS-StreamlitTemplateApp" Language="1033" Version="1.0.0.0" Manufacturer="OpenMS" UpgradeCode="8d28e8c7-45dc-446c-b889-99a6aea2f1a5">' >> streamlit_exe.wxs
-        echo '    <Package InstallerVersion="500" Compressed="yes" InstallScope="perMachine"/>' >> streamlit_exe.wxs
-        echo '    <Media Id="1" Cabinet="streamlit.cab" EmbedCab="yes" />' >> streamlit_exe.wxs
-        echo '    <Property Id="WIXUI_INSTALLDIR" Value="INSTALLFOLDER" />' >> streamlit_exe.wxs
-        echo '    <Property Id="INSTALLFOLDER" Secure="yes" />' >> streamlit_exe.wxs
-        echo '    <Directory Id="TARGETDIR" Name="SourceDir">' >> streamlit_exe.wxs
-        echo '      <Directory Id="ProgramFilesFolder">' >> streamlit_exe.wxs
-        echo '        <Directory Id="INSTALLFOLDER" Name="StreamlitApp" />' >> streamlit_exe.wxs
-        echo '      </Directory>' >> streamlit_exe.wxs
-        echo '    </Directory>' >> streamlit_exe.wxs
-        echo '    <Feature Id="MainFeature" Title="Main Application" Level="1">' >> streamlit_exe.wxs
-        echo '      <ComponentGroupRef Id="StreamlitExeFiles" />' >> streamlit_exe.wxs
-        echo '      <ComponentRef Id="BatFileComponent" />' >> streamlit_exe.wxs
-        echo '    </Feature>' >> streamlit_exe.wxs
-        echo '    <Component Id="BatFileComponent" Guid="7aa6c3dc-f78e-40ce-b6a1-e11240af3c84" Directory="INSTALLFOLDER">' >> streamlit_exe.wxs
-        echo '      <File Id="BatFile" Source="SourceDir/run_app.bat" KeyPath="yes" />' >> streamlit_exe.wxs
-        echo '    </Component>' >> streamlit_exe.wxs
-        echo '    <CustomAction Id="RunBatchFile" Directory="INSTALLFOLDER" Execute="deferred" Return="asyncNoWait"' >> streamlit_exe.wxs
-        echo '                  ExeCommand="cmd.exe /c &quot;[INSTALLFOLDER]run_app.bat&quot;" />' >> streamlit_exe.wxs
-        echo '    <InstallExecuteSequence>' >> streamlit_exe.wxs
-        echo '      <Custom Action="RunBatchFile" Before="InstallFinalize">NOT REMOVE</Custom>' >> streamlit_exe.wxs
-        echo '    </InstallExecuteSequence>' >> streamlit_exe.wxs
-        echo '    <UI>' >> streamlit_exe.wxs
-        echo '      <UIRef Id="WixUI_InstallDir" />' >> streamlit_exe.wxs
-        echo '      <UIRef Id="WixUI_ErrorProgressText" />' >> streamlit_exe.wxs
-        echo '    </UI>' >> streamlit_exe.wxs
-        echo '    <WixVariable Id="WixUILicenseRtf" Value="SourceDir/dummy_license.rtf" />' >> streamlit_exe.wxs
-        echo '  </Product>' >> streamlit_exe.wxs
-        echo '</Wix>' >> streamlit_exe.wxs
-
-    - name: Build msi
+        cat <<EOF > streamlit_exe.wxs
+        <?xml version="1.0"?>
+        <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
+          <Product Id="8434b940-a943-40f1-ab1f-4db3feedb4ba" Name="${{ env.APP_NAME }}" Language="1033" Version="1.0.0.0" Codepage="1252" Manufacturer="OpenMS Developer Team" UpgradeCode="8d28e8c7-45dc-446c-b889-99a6aea2f1a5">
+            <Package Id="*" InstallerVersion="300" Compressed="yes" InstallPrivileges="elevated" Platform="x64" />
+            <Media Id="1" Cabinet="streamlit.cab" EmbedCab="yes" />
+        
+            <!-- Folder structure -->
+            <Property Id="WIXUI_INSTALLDIR" Value="INSTALLFOLDER" />
+            <Directory Id="TARGETDIR" Name="SourceDir">
+              <Directory Id="ProgramFilesFolder"> 
+                <Directory Id="INSTALLFOLDER" Name="${{ env.APP_NAME }}">
+                  <Directory Id="AppSubFolder" Name="${{ env.APP_NAME }}" /> 
+                  <Component Id="CreateAppFolder" Guid="95dbfa06-d36a-427f-995c-e87769ac2e59">
+                    <CreateFolder>
+                      <Permission User="Everyone" GenericAll="yes" />
+                    </CreateFolder>
+                  </Component>
+                </Directory>
+              </Directory>
+              <Directory Id="DesktopFolder" />
+            </Directory>
+        
+            <!-- Add components -->
+            <Feature Id="MainFeature" Title="Main Application" Level="1">
+              <ComponentGroupRef Id="StreamlitExeFiles" />
+              <ComponentRef Id="CreateAppFolder" />
+              <ComponentRef Id="DesktopShortcutComponent" />
+              <ComponentRef Id="InstallDirShortcutComponent" />
+            </Feature>
+        
+            <!-- Create shortcut for running app on desktop -->
+            <Component Id="DesktopShortcutComponent" Guid="3597b243-9180-4d0b-b105-30d8b0d1a334" Directory="DesktopFolder">
+              <Shortcut Id="DesktopShortcut" Name="${{ env.APP_NAME }}" Description="Launch ${{ env.APP_NAME }}" Target="[AppSubFolder]${{ env.APP_NAME }}.bat" WorkingDirectory="AppSubFolder" Icon="AppIcon" />
+              <RegistryValue Root="HKCU" Key="Software\\OpenMS\\${{ env.APP_NAME }}" Name="DesktopShortcut" Type="integer" Value="1" KeyPath="yes" />
+            </Component>
+        
+            <!-- Create shortcut for running app in installer folder -->
+            <Component Id="InstallDirShortcutComponent" Guid="c2df9472-3b45-4558-a56d-6034cf7c8b72" Directory="AppSubFolder">
+              <Shortcut Id="InstallDirShortcut" Name="${{ env.APP_NAME }}" Description="Launch ${{ env.APP_NAME }}" Target="[AppSubFolder]${{ env.APP_NAME }}.bat" WorkingDirectory="AppSubFolder" Icon="AppIcon" />
+              <RegistryValue Root="HKCU" Key="Software\\OpenMS\\${{ env.APP_NAME }}" Name="InstallFolderShortcut" Type="integer" Value="1" KeyPath="yes" />
+            </Component>
+        
+            <!-- Provide icon here; it should exist in the SourceDir folder -->
+            <Icon Id="AppIcon" SourceFile="SourceDir/openms.ico" />
+        
+            <!-- Run app directly after installation -->
+            <!-- <CustomAction Id="RunApp" Directory="AppSubFolder" Execute="deferred" Return="asyncNoWait" Impersonate="no"
+                          ExeCommand="cmd.exe /c &quot;[AppSubFolder]${{ env.APP_NAME }}.bat&quot;" /> -->
+            
+            <!-- Custom Action to Show Success Message -->
+            <Binary Id="ShowMessageScript" SourceFile="SourceDir/ShowSuccessMessage.vbs" />
+            <CustomAction Id="ShowSuccessMessage" BinaryKey="ShowMessageScript" VBScriptCall="" Execute="immediate" Return="check" />
+        
+            <!-- Add all Custom Actions -->
+            <InstallExecuteSequence>
+              <!-- Custom action display success message -->
+              <Custom Action="ShowSuccessMessage" After="InstallFinalize">NOT Installed</Custom>
+              <!-- Run app directly after installation -->
+              <!-- <Custom Action="RunApp" Before="InstallFinalize">NOT REMOVE</Custom> -->
+            </InstallExecuteSequence>
+        
+            <!-- Interface options -->
+            <UI>
+                  <UIRef Id="WixUI_InstallDir" />
+                  <UIRef Id="WixUI_ErrorProgressText" />
+            </UI> 
+        
+            <!-- Provide license; it should exist in the SourceDir folder -->
+            <WixVariable Id="WixUILicenseRtf" Value="SourceDir/openms_license.rtf" />
+          </Product>
+        </Wix>
+        EOF
+        
+    - name: Build .wixobj file with candle.exe
       run: |
         ./wix/candle.exe streamlit_exe.wxs streamlit_exe_files.wxs
-        ./wix/light.exe -ext WixUIExtension -sice:ICE60 -o Streamlit-template-installer-test.msi streamlit_exe_files.wixobj streamlit_exe.wixobj
-          
-    - name: Delete OpenMS bin artifact
-      uses: geekyeggo/delete-artifact@v5
-      with:
-          name: openms-package
+        
+    - name: Link .wixobj file into .msi with light.exe
+      run: |
+        ./wix/light.exe -ext WixUIExtension -sice:ICE60 -o ${{ env.APP_NAME }}.msi streamlit_exe_files.wixobj streamlit_exe.wixobj
+
+    #- name: Delete OpenMS bin artifact
+    #  uses: geekyeggo/delete-artifact@v5
+    #   with:
+    #     name: openms-package
     
     - name: Archive build artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: OpenMS-StreamlitTemplateApp
+        name: OpenMS-NuXLApp
         path: |
-          OpenMS-StreamlitTemplateApp.msi
+          ${{ env.APP_NAME }}.msi
