--- a/.github/workflows/build-windows-executable-app.yaml
+++ b/.github/workflows/build-windows-executable-app.yaml
@@ -253,8 +253,25 @@ jobs:
         #$files = $env:TOPP_TOOLS -split ' '
         #foreach ($file in $files) {
         #  Copy-Item "openms-bin/${file}.exe" -Destination "streamlit_exe/${file}.exe"
-        
         #}
+
+    - name: Identify problematic filenames
+      shell: bash
+      run: |
+        echo "Scanning for problematic filenames in streamlit_exe..."
+        
+        # Define invalid characters regex: Allows alphanumerics, underscores, hyphens, dots
+        invalid_files=$(find streamlit_exe -type f | grep -P '[^a-zA-Z0-9_.-]')
+        
+        # Check if any invalid files are found
+        if [ ! -z "$invalid_files" ]; then
+          echo "The following files have invalid characters:"
+          echo "$invalid_files"
+          exit 1  # Exit with an error to prevent further steps
+        else
+          echo "No problematic filenames detected."
+        fi
+        
     - name: Generate Readme.txt
       shell: bash
       run: |
@@ -315,7 +332,7 @@ jobs:
         cat <<EOF > streamlit_exe.wxs
         <?xml version="1.0"?>
         <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
-          <Product Id="8434b940-a943-40f1-ab1f-4db3feedb4ba" Name="${{ env.APP_NAME }}" Language="1033" Version="1.0.0.0" Codepage="65001" Manufacturer="OpenMS Developer Team" UpgradeCode="8d28e8c7-45dc-446c-b889-99a6aea2f1a5">
+          <Product Id="8434b940-a943-40f1-ab1f-4db3feedb4ba" Name="${{ env.APP_NAME }}" Language="1033" Version="1.0.0.0" Codepage="1252" Manufacturer="OpenMS Developer Team" UpgradeCode="8d28e8c7-45dc-446c-b889-99a6aea2f1a5">
             <Package Id="*" InstallerVersion="300" Compressed="yes" InstallPrivileges="elevated" Platform="x64" />
             <Media Id="1" Cabinet="streamlit.cab" EmbedCab="yes" />
         
