--- a/.github/workflows/build-windows-executable-app.yaml
+++ b/.github/workflows/build-windows-executable-app.yaml
@@ -404,6 +404,5 @@ jobs:
       with:
         name: OpenMS-NuXLApp
         path: |
-          # ${{ env.APP_NAME }}.msi
-          streamlit_exe
+          streamlit_exe/*
           
