--- a/.github/workflows/build-windows-executable-app.yaml
+++ b/.github/workflows/build-windows-executable-app.yaml
@@ -187,10 +187,10 @@ jobs:
     - name: Extract bin and share from package
       run: |
         mkdir -p openms-bin
-        cp -r OpenMS/bld/bin/* openms-bin/ || echo "No files to copy from OpenMS/bld/bin"
+        cp -r openms-package/OpenMS/bld/bin/* openms-bin/ || echo "No files to copy from openms-package/OpenMS/bld/bin"
 
         mkdir -p openms-thirdparty
-        cp -r _thirdparty/* openms-thirdparty/ || echo "No files to copy from _thirdparty"
+        cp -r openms-package/_thirdparty/* openms-thirdparty/ || echo "No files to copy from openms-package/_thirdparty"
         
         #cp -r share ../share
         #cp -r openms-package/bin ../openms-bin
