--- a/.github/workflows/build-windows-executable-app.yaml
+++ b/.github/workflows/build-windows-executable-app.yaml
@@ -397,9 +397,9 @@ jobs:
       run: |
         ./wix/candle.exe streamlit_exe.wxs streamlit_exe_files.wxs
         
-    #- name: Link .wixobj file into .msi with light.exe
-    #  run: |
-    #    ./wix/light.exe -ext WixUIExtension -sice:ICE60 -o ${{ env.APP_NAME }}.msi streamlit_exe_files.wixobj streamlit_exe.wixobj
+    - name: Link .wixobj file into .msi with light.exe
+      run: |
+        ./wix/light.exe -ext WixUIExtension -sice:ICE60 -o ${{ env.APP_NAME }}.msi streamlit_exe_files.wixobj streamlit_exe.wixobj
 
     #- name: Delete OpenMS bin artifact
     #  uses: geekyeggo/delete-artifact@v5
