--- a/.github/workflows/windows_exec.yaml
+++ b/.github/workflows/windows_exec.yaml
@@ -258,6 +258,10 @@ jobs:
 
     - name: Create All-in-one executable folder
       run: |
+        if (Test-Path -Path "streamlit_exe") {
+            Remove-Item -Recurse -Force "streamlit_exe"
+        }
+        
         mkdir streamlit_exe
 
         mv python-${{ env.PYTHON_VERSION }} streamlit_exe
@@ -321,6 +325,10 @@ jobs:
 
     - name: Prepare SourceDir
       run: |
+        if (Test-Path -Path "SourceDir") {
+            Remove-Item -Recurse -Force "SourceDir"
+        }
+        
         mkdir SourceDir
         mv streamlit_exe/* SourceDir
         cp ShowSuccessMessage.vbs SourceDir
