--- a/.github/workflows/windows_exec.yaml
+++ b/.github/workflows/windows_exec.yaml
@@ -417,18 +417,20 @@ jobs:
       run: |
         ./wix/candle.exe streamlit_exe.wxs streamlit_exe_files.wxs
         
-    - name: Link .wixobj file into .msi with light.exe
-      run: |
-        ./wix/light.exe -ext WixUIExtension -sice:ICE60 -o ${{ env.APP_NAME }}.msi streamlit_exe_files.wixobj streamlit_exe.wixobj
+    #- name: Link .wixobj file into .msi with light.exe
+    #  run: |
+    #    ./wix/light.exe -ext WixUIExtension -sice:ICE60 -o ${{ env.APP_NAME }}.msi streamlit_exe_files.wixobj streamlit_exe.wixobj
 
-    - name: Compress Installer
-      run: |
-        7z a OpenMS-App.zip ${{ env.APP_NAME }}.msi
+    #- name: Compress Installer
+    #  run: |
+    #    7z a OpenMS-App.zip ${{ env.APP_NAME }}.msi
 
     - name: Archive build artifacts
       uses: actions/upload-artifact@v4
       with:
         name: OpenMS-App
         path: |
-          OpenMS-App.zip
+          SourceDir
+          streamlit_exe
+          
     
