--- a/.github/workflows/windows_exec.yaml
+++ b/.github/workflows/windows_exec.yaml
@@ -135,13 +135,13 @@ jobs:
           CCACHE_COMPRESSLEVEL: 12
           CCACHE_MAXSIZE: 400M
 
-    - name: Test Windows
-      shell: bash
-      run: ctest --output-on-failure -V -S $GITHUB_WORKSPACE/OpenMS/tools/ci/citest.cmake
-      env:
-         SOURCE_DIRECTORY: "${{ github.workspace }}/OpenMS"
-         CI_PROVIDER: "GitHub-Actions"
-         BUILD_NAME: "${{ env.RUN_NAME }}-Win64-class-topp-${{ github.run_number }}"
+    # - name: Test Windows
+    # shell: bash
+    #  run: ctest --output-on-failure -V -S $GITHUB_WORKSPACE/OpenMS/tools/ci/citest.cmake
+    #  env:
+    #     SOURCE_DIRECTORY: "${{ github.workspace }}/OpenMS"
+    #     CI_PROVIDER: "GitHub-Actions"
+    #     BUILD_NAME: "${{ env.RUN_NAME }}-Win64-class-topp-${{ github.run_number }}"
 
     - name: Package
       shell: bash
@@ -159,7 +159,7 @@ jobs:
       with:
         name: openms-package
         path: |
-          ${{ github.workspace }}/OpenMS/bld/*
+          {{ github.workspace }}/OpenMS/bld/*.zip
           ${{ github.workspace }}/_thirdparty/*
 
   build-executable:
