take everything openms folder :: Update windows_exec.yaml

--- a/.github/workflows/windows_exec.yaml
+++ b/.github/workflows/windows_exec.yaml
@@ -143,23 +143,23 @@ jobs:
     #     CI_PROVIDER: "GitHub-Actions"
     #     BUILD_NAME: "${{ env.RUN_NAME }}-Win64-class-topp-${{ github.run_number }}"
 
-    - name: Package
-      shell: bash
-      run: |
-          ctest --output-on-failure -V -S $GITHUB_WORKSPACE/OpenMS/tools/ci/cipackage.cmake
-      env:
-          SOURCE_DIRECTORY: "${{ github.workspace }}/OpenMS"
-          PACKAGE_TYPE: zip
-          SEARCH_ENGINES_DIRECTORY: "${{ github.workspace }}/_thirdparty"
-          CI_PROVIDER: "GitHub-Actions"
-          CPACK_PACKAGE_FILE_NAME: "openms-package"
+    #- name: Package
+    #  shell: bash
+    #  run: |
+    #      ctest --output-on-failure -V -S $GITHUB_WORKSPACE/OpenMS/tools/ci/cipackage.cmake
+    #  env:
+    #      SOURCE_DIRECTORY: "${{ github.workspace }}/OpenMS"
+    #      PACKAGE_TYPE: zip
+    #      SEARCH_ENGINES_DIRECTORY: "${{ github.workspace }}/_thirdparty"
+    #      CI_PROVIDER: "GitHub-Actions"
+    #      CPACK_PACKAGE_FILE_NAME: "openms-package"
 
     - name: Upload package as artifact
       uses: actions/upload-artifact@v4
       with:
         name: openms-package
         path: |
-          {{ github.workspace }}/OpenMS/bld/*.zip
+          {{ github.workspace }}/OpenMS/*
           ${{ github.workspace }}/_thirdparty/*
 
   build-executable:
