openms folder ::Update windows_exec.yaml

--- a/.github/workflows/windows_exec.yaml
+++ b/.github/workflows/windows_exec.yaml
@@ -159,7 +159,7 @@ jobs:
       with:
         name: openms-package
         path: |
-          {{ github.workspace }}/OpenMS/*
+          ${{ github.workspace }}/OpenMS/*
           ${{ github.workspace }}/_thirdparty/*
 
   build-executable:
